--- a/docs/custom-flows/email-password.mdx
+++ b/docs/custom-flows/email-password.mdx
@@ -68,6 +68,7 @@ export default function Page() {
         strategy: 'email_code'
       })
 
+      // Once the sign-up is created, and email address verification is prepared, the sign-up form is no longer in a submission/loading state. The verification state is set to true and as a result, the verification form will be presented to the user so they can input their verification code.
       setVerifying(true)
       setLoading(false)
     }
