Updated code syntax, comments.
- updated code syntax as pre review
- trimmed code down to bare minimum
- updated comments
- copied comments to Pages Router code

--- a/docs/custom-flows/email-password.mdx
+++ b/docs/custom-flows/email-password.mdx
@@ -38,71 +38,78 @@ A successful sign-up consists of the following steps:
 ```tsx filename="app/sign-up/[[...sign-up]]/page.tsx
 'use client'
 
-import * as React from 'react'
-import { useSignUp } from '@clerk/nextjs'
-import { useRouter } from 'next/navigation'
-import { ClerkAPIErrorJSON } from '@clerk/types'
+import * as React from 'react';
+import { useSignUp } from '@clerk/nextjs';
+import { useRouter } from 'next/navigation';
+import { ClerkAPIErrorJSON } from '@clerk/types';
 
 export default function Page() {
-  const { isLoaded, signUp, setActive } = useSignUp()
-  const [emailAddress, setEmailAddress] = React.useState("")
-  const [password, setPassword] = React.useState("")
-  const [verifying, setVerifying] = React.useState(false)
-  const [loading, setLoading] = React.useState(false)
-  const [code, setCode] = React.useState("")
-  const [errors, setErrors] = React.useState<ClerkAPIErrorJSON[] | null>(null)
-  const router = useRouter()
+  const { isLoaded, signUp, setActive } = useSignUp();
+  const [emailAddress, setEmailAddress] = React.useState("");
+  const [password, setPassword] = React.useState("");
+  const [verifying, setVerifying] = React.useState(false);
+  const [code, setCode] = React.useState("");
+  const router = useRouter();
 
+  // This function will handle the user submitting their email and passowrd
   const handleSubmit = async (e: React.FormEvent) => {
-    e.preventDefault()
-    // Once the sign-up form is submitted, it should be in a submission/loading state while the sign-up is being created.
-    setLoading(true)
-    if (!isLoaded) return
-
+    e.preventDefault();
+    if (!isLoaded) return;
+    
+    // Start the Sign Up process using the email and password provided
     try {
       await signUp.create({
         emailAddress, password
-      })
+      });
 
+      // Send the user an email with the verification code
       await signUp.prepareEmailAddressVerification({
         strategy: 'email_code'
-      })
+      });
 
-      // Once the sign-up is created, and email address verification is prepared, the sign-up form is no longer in a submission/loading state. The verification state is set to true and as a result, the verification form will be presented to the user so they can input their verification code.
-      setVerifying(true)
-      setLoading(false)
+      // Set 'verifying' true to display second form and capture the OTP code
+      setVerifying(true);
     }
     catch (err: any) {
-      console.error('Error:', JSON.stringify(err, null, 2))
-      setErrors(err.errors)
-      setLoading(false)
+      // This can return an array of errors.
+      // See https://clerk.com/docs/custom-flows/error-handling to learn about error handling
+      console.error('Error:', JSON.stringify(err, null, 2));
     }
   }
 
+  // This function will handle the user submitting a code for verification
   const handleVerify = async (e: React.FormEvent) => {
-    e.preventDefault()
-    // Once the verification form is submitted, it should be in a submission/loading state while the verification is being "attempted".
-    setLoading(true)
-    if (!isLoaded) return
+    e.preventDefault();
+    if (!isLoaded) return;
 
     try {
+      // Submit the code that the user provides to attempt verification
       const completeSignUp = await signUp.attemptEmailAddressVerification({
         code
-      })
+      });
 
-      if (completeSignUp.status === "complete") {
-        await setActive({ session: completeSignUp.createdSessionId })
+      if (completeSignUp.status !== "complete") {
+        // The status can also be `abandoned` or `missing_requirements`
+        // Please see https://clerk.com/docs/references/react/use-sign-up#result-status for  more information
+        console.log(JSON.stringify(completeSignUp, null, 2));
       }
-      setLoading(false)
-      router.push("/")
+
+      // Check the status to see if it is complete
+      // If complete, the user has been created -- set the session active
+      if (completeSignUp.status === "complete") {
+        await setActive({ session: completeSignUp.createdSessionId });
+        // Redirect the user to a post sign-up route
+        router.push("/");
+      }
     }
     catch (err: any) {
-      setErrors(err.message)
-      setLoading(false)
+      // This can return an array of errors.
+      // See https://clerk.com/docs/custom-flows/error-handling to learn about error handling
+      console.error('Error:', JSON.stringify(err, null, 2));
     }
   }
 
-  // Once the sign-up form was created, verifying was set to true and as a result, this verification form is presented to the user to input their verification code.
+  // Once the sign-up form was submitted, verifying was set to true and as a result, this verification form is presented to the user to input their verification code.
   if (verifying) {
     return (
       <form onSubmit={handleVerify}>
@@ -112,7 +119,8 @@ export default function Page() {
       </form>
     )
   }
-
+  
+  // Display the initial sign-up form to capture the email and password
   return (
     <form onSubmit={handleSubmit}>
       <div>
@@ -127,9 +135,9 @@ export default function Page() {
         <button type="submit">Verify Email</button>
       </div>
     </form>
-
-  )
+  );
 }
+```
 ```tsx filename="pages/sign-up/[[...index]].tsx"
 
 import { useState } from "react";
@@ -143,30 +151,34 @@ export default function SignUpForm() {
   const [pendingVerification, setPendingVerification] = useState(false);
   const [code, setCode] = useState("");
   const router = useRouter();
-  // start the sign up process.
+
+  // This function will handle the user submitting their email and passowrd
   const handleSubmit = async (e) => {
     e.preventDefault();
     if (!isLoaded) {
       return;
     }
 
+    // Start the Sign Up process using the email and password provided
     try {
       await signUp.create({
         emailAddress,
         password,
       });
 
-      // send the email.
+      // Send the user an email with the verification code
       await signUp.prepareEmailAddressVerification({ strategy: "email_code" });
 
-      // change the UI to our pending section.
+      // Set 'verifying' true to display second form and capture the OTP code
       setPendingVerification(true);
-    } catch (err: any) {
+    } catch (err: any) {      
+      // This can return an array of errors.
+      // See https://clerk.com/docs/custom-flows/error-handling to learn about error handling
       console.error(JSON.stringify(err, null, 2));
     }
   };
 
-  // This verifies the user using email code that is delivered.
+  // This function will handle the user submitting a code for verification
   const onPressVerify = async (e) => {
     e.preventDefault();
     if (!isLoaded) {
@@ -174,19 +186,27 @@ export default function SignUpForm() {
     }
 
     try {
+      // Submit the code that the user provides to attempt verification
       const completeSignUp = await signUp.attemptEmailAddressVerification({
         code,
       });
+
       if (completeSignUp.status !== "complete") {
-        /*  investigate the response, to see if there was an error
-         or if the user needs to complete more steps.*/
+        // The status can also be `abandoned` or `missing_requirements`
+        // Please see https://clerk.com/docs/references/react/use-sign-up#result-status for  more information
         console.log(JSON.stringify(completeSignUp, null, 2));
       }
+
+      // Check the status to see if it is complete
+      // If complete, the user has been created -- set the session active
       if (completeSignUp.status === "complete") {
         await setActive({ session: completeSignUp.createdSessionId })
+        // Redirect the user to a post sign-up route
         router.push("/");
       }
-    } catch (err: any) {
+    } catch (err: any) {      
+      // This can return an array of errors.
+      // See https://clerk.com/docs/custom-flows/error-handling to learn about error handling
       console.error(JSON.stringify(err, null, 2));
     }
   };
@@ -713,29 +733,34 @@ export default function SignInForm() {
       return;
     }
 
-    // Start the SIgn In process
+    // Start the Sign In process using the email and password provided
     try {
-      const result = await signIn.create({
+      const completeSignIn = await signIn.create({
         identifier: email,
         password,
       });
 
-      if (result.status === "complete") {
-        await setActive({ session: result.createdSessionId });
-        router.push("/")
+      if (completeSignIn.status !== 'complete') {
+        // The status can also be `needs_factor_on'm 'needs_factor_two' or 'needs_identifier'
+        // Please see https://clerk.com/docs/references/react/use-sign-in#result-status for  more information
+        console.log(JSON.stringify(completeSignIn, null, 2));
       }
-      else {
-        // If the status is not complete, check why. User may need to 
-        // complete further steps.
-        console.log(result);
+
+      if (completeSignIn.status === 'complete') {
+        // If complete, user exists and porivded password match -- set session active
+        await setActive({ session: completeSignIn.createdSessionId });
+        // Redirect the user to a post sign-in route
+        router.push('/');
       }
-      // Handle errors
+
     } catch (err: any) {
-      console.error("error", err.errors[0].longMessage)
+      // This can return an array of errors.
+      // See https://clerk.com/docs/custom-flows/error-handling to learn about error handling
+      console.error(JSON.stringify(err, null, 2));
     }
   };
 
-  // Capture user email and password
+  // Display a form to capture the user's email and password
   return (
     <div>
       <form onSubmit={(e) => handleSubmit(e)}>
@@ -765,13 +790,15 @@ export default function SignInForm() {
   const [emailAddress, setEmailAddress] = useState("");
   const [password, setPassword] = useState("");
   const router = useRouter();
-  // start the sign In process.
+
+  // Handle the submission of the sign-in form
   const handleSubmit = async (e) => {
     e.preventDefault();
     if (!isLoaded) {
       return;
     }
 
+    // Start the Sign In process using the email and password provided
     try {
       const result = await signIn.create({
         identifier: emailAddress,
@@ -779,20 +806,24 @@ export default function SignInForm() {
       });
 
       if (result.status === "complete") {
-        console.log(result);
+        // If complete, user exists and porivded password match -- set session active
         await setActive({ session: result.createdSessionId });
+        // Redirect the user to a post sign-in route
         router.push("/")
       }
       else {
-        /*Investigate why the login hasn't completed */
-        console.log(result);
+        // The status can also be `needs_factor_on'm 'needs_factor_two' or 'needs_identifier'
+        // Please see https://clerk.com/docs/references/react/use-sign-in#result-status for  more information
+        console.error(JSON.stringify(results, null, 2));
       }
-
     } catch (err: any) {
-      console.error("error", err.errors[0].longMessage)
+      // This can return an array of errors.
+      // See https://clerk.com/docs/custom-flows/error-handling to learn about error handling
+      console.error(JSON.stringify(err, null, 2));
     }
   };
 
+  // Display a form to capture the user's email and password
   return (
     <div>
       <form>
@@ -844,7 +875,9 @@ export default function SignInForm() {
         console.log(result);
       }
 
-    } catch (err: any) {
+    } catch (err: any) { 
+      // This can return an array of errors.
+      // See https://clerk.com/docs/custom-flows/error-handling to learn about error handling
       console.error("error", err.errors[0].longMessage)
     }
   };
