Updated image, added requested changes

--- a/docs/users/sync-data.mdx
+++ b/docs/users/sync-data.mdx
@@ -29,15 +29,15 @@ If you are developing on your localhost, you will need to expose your endpoint t
 
 Once you click the **Create** button, you'll be presented with your webhook endpoint dashboard. Here you can see the URL of your endpoint and the events you selected and you can also test your endpoint.
 
-### Add your Signing Secret to your .env.local file
+### Add your Signing Secret to your `.env.local` file
 
 
-To retrieve your Webhook signing secret, click on the [Webhooks](https://dashboard.clerk.com/last-active?path=webhooks) page in the side nav of the [Clerk Dashboard](https://dashboard.clerk.com). 
+To retrieve your Webhook Signing Secret, click on the [Webhooks](https://dashboard.clerk.com/last-active?path=webhooks) page in the side nav of the [Clerk Dashboard](https://dashboard.clerk.com). 
 <Images
   width={2000}
   height={1125}
   src="/images/users/guides/sync-backend/sign-secret.png"
-  alt="The Webhooks page in the Clerk Dashboard. There is a red arrow pointing to where the signing secret is located."
+  alt="The Webhooks page in the Clerk Dashboard. There is a red arrow pointing to where the Signing Secret is located."
 />
 You will need to set this value as an environment variable in your project. This guide uses `WEBHOOK_SECRET` as the key. However, you can set the key to whatever you like; just be sure to update the code examples.
 ```env filename=".env.local"
@@ -65,7 +65,7 @@ Below is an example of a webhook object with no payload:
 ```
 Additionally messages contain an `id` string in the headers. To learn more about the payload structure, check out the [webhooks reference](/docs/integrations/webhooks).
 
-### Install the `Svix` package
+### Install the `svix` package
 
 To get started setting up your endpoint, you will need to install the [`svix` package](https://www.npmjs.com/package/svix). Svix provides a package for verifying the webhook signature, making it easy to verify the authenticity of the webhook events.
 
@@ -321,6 +321,14 @@ export const config = {
 
 To test a webhook locally, you can use a tool like [ngrok](https://ngrok.com/) or [localtunnel](https://localtunnel.github.io/www/) to expose your local server to the internet. You can then use the ngrok URL as the webhook URL in the Clerk Dashboard.
 
-If you are testing webhooks outside of your development, you can use our webhook test requests to test your webhook. You can find these by clicking on the [Webhooks](https://dashboard.clerk.com/last-active?path=webhooks) section of the Clerk Dashboard, selecting the webhook endpoint you created and then the `Testing` tab. You can select an event from the 'Send Event' dropdown to see the example payload and to send a test message to your application.
+If you are testing webhooks outside of your development, you can use our webhook test requests to test your webhook. In the Clerk Dashboard, go to the **[Webhooks](https://dashboard.clerk.com/last-active?path=webhooks)** page, select the webhook endpoint you created, and then select the **Testing** tab. You can select an event from the **Send Event** dropdown to see the example payload and to send a test message to your application.
+
+<Images
+  width={1433}
+  height={1256}
+  src="/images/users/guides/sync-backend/testing-webhooks.webp"
+  alt="The Testing section of the Webhooks page in the Clerk Dashboard. The red arrows indicate how to navigiate to the section and select the event to test."
+/>
+
 
 </Steps>
