--- a/docs/integrations/databases/convex.mdx
+++ b/docs/integrations/databases/convex.mdx
@@ -118,7 +118,7 @@ export default query(async ({ auth }): Promise<UserIdentity | null> => {
 });
 ```
 
-The identity object should be match the [openID spec](https://openid.net/specs/openid-connect-core-1_0.html#StandardClaims), you can update the JWT template to include them for example:
+The identity object should match the [openID spec](https://openid.net/specs/openid-connect-core-1_0.html#StandardClaims), you can update the JWT template to include them for example:
 
 ```sh
 {
